syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform
{
    rpc GetAllPlatforms (GetAllPlatformsRequest) returns (GetAllPlatformsResponse);
}

message GetAllPlatformsRequest{}

message PlatformItem
{
    int32 platformId = 1;
    string name = 2;
    string publisher = 3;
}

message GetAllPlatformsResponse
{
    repeated PlatformItem platform = 1;
}